--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,18 @@
+@inproceedings{xml,
+  title={DRESC: A retargetable compiler for coarse-grained reconfigurable architectures},
+  author={Mei, Bingfeng and Vernalde, Serge and Verkest, Diederik and De Man, Hugo and Lauwereins, Rudy},
+  booktitle={Field-Programmable Technology, 2002.(FPT). Proceedings. 2002 IEEE International Conference on},
+  pages={166--173},
+  year={2002},
+  organization={IEEE}
+}
+
+@Manual{Virage,
+title = {40LP-TSMC Datasheet},
+author = {DesignWare Memory Compilers},
+url = {https://www.synopsys.com/dw/doc.php/ds/es/40LP_Duet_memory_logic_DS.pdf}
+}
+
 @inproceedings{malik2000low,
   title={A low power unified cache architecture providing power and performance flexibility},
   author={Malik, Afzal and Moyer, Bill and Cermak, Dan},
