2nd iteration of review comments
To Do:
PGK comments

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,50 @@
+@inproceedings{DL,
+  title={DL: A data layout transformation system for heterogeneous computing},
+  author={Sung, I-Jui and Liu, Geng Daniel and Hwu, Wen-Mei W},
+  booktitle={Innovative Parallel Computing (InPar), 2012},
+  pages={1--11},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{dymaxion,
+  title={Dymaxion: optimizing memory access patterns for heterogeneous systems},
+  author={Che, Shuai and Sheaffer, Jeremy W and Skadron, Kevin},
+  booktitle={Proceedings of 2011 international conference for high performance computing, networking, storage and analysis},
+  pages={13},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{3D,
+  title={Data reorganization in memory using 3D-stacked DRAM},
+  author={Akin, Berkin and Franchetti, Franz and Hoe, James C},
+  booktitle={Proceedings of the 42nd Annual International Symposium on Computer Architecture},
+  pages={131--143},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{ishitobi2007code,
+  title={Code placement for reducing the energy consumption of embedded processors with scratchpad and cache memories},
+  author={Ishitobi, Yuriko and Ishihara, Tohru and Yasuura, Hiroto},
+  booktitle={Embedded Systems for Real-Time Multimedia, 2007. ESTIMedia 2007. IEEE/ACM/IFIP Workshop on},
+  pages={13--18},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{steinke2002assigning,
+  title={Assigning program and data objects to scratchpad for energy reduction},
+  author={Steinke, Stefan and Wehmeyer, Lars and Lee, Bo-Sik and Marwedel, Peter},
+  booktitle={Design, Automation and Test in Europe Conference and Exhibition, 2002. Proceedings},
+  pages={409--415},
+  year={2002},
+  organization={IEEE}
+}
+
+
+
 @inproceedings{xml,
   title={DRESC: A retargetable compiler for coarse-grained reconfigurable architectures},
   author={Mei, Bingfeng and Vernalde, Serge and Verkest, Diederik and De Man, Hugo and Lauwereins, Rudy},
