--- a/LayoutStorageOpt.tex
+++ b/LayoutStorageOpt.tex
@@ -286,7 +286,7 @@ The proposed architecture uses scratch-pad memories and no cache memory is inclu
 The main reason is that the data can be allocated on the scratchpad memory during compilation by the designer.
 Software controlled allocation is a significant feature for the current methodology, as the allocation of data can be fully determined by the designer during design-time.
 On the other hand, the hardware control automatically copies the data into the cache and resolves any hits or misses.
-The basic principles of the methodology are still applicable, but some modifications are probably needed to deal with cache memories.
+The basic principles of the methodology are still applicable, but some modifications would be needed to deal with cache memories.
 Temporal locality and data reuse are taken into consideration during the interleaving exploration.
 
 The methodology explores different interleaving and data to memory mapping options for the reconfigurable architecture.
@@ -307,7 +307,7 @@ Thus, the accuracy of the models influence the decisions taken during the design
 
 The dynamic memory organization is constructed using commercially available SRAM memory models (MM).
 For those models delay and energy numbers are derived from a commercial memory compiler.
-The commercial memory compiler is part of DesignWare Memory Compilers provided by Synopsys. The logic libraries supporting a wide range of foundries and process technologies from 250nm to 28nm. The memories are optimized for low power, high performance and high density. The 40nm library was chosen for the current work. The datasheet can be found in \cite{Virage}.
+The commercial memory compiler is one of the state-of-the-art compilers. The logic libraries supporting a wide range of foundries and process technologies from 250nm to 28nm. The memories are optimized for low power, high performance and high density. The 40nm library was chosen for the current work. The datasheet can be found in \cite{Virage}.
 In addition, experimental standard cell-based memories (SCMEM) \cite{Mei11}  are  considered for smaller memories due to their energy and area efficiency for reasonably small storage capacities, as argued in \cite{Mei10}. 
 The standard cell-based memories are synthesized using Cadence RTL compiler for TSMC 40nm standard library. 
 Afterwards, power simulations on the synthesized design are carried out using Synopsys PrimeTime, in order to obtain energy numbers.
@@ -541,7 +541,7 @@ The mapping step is performed based on these constrains.
 
 \subsection{Benchmark Applications}
 
-Interleaving is a suitable layout optimization for the target set of benchmark applications.
+Interleaving is an energy optimization technique for the target set of benchmark applications, which are characterized by holes in their access patterns.
 The applications that benefit most from the proposed methodology are characterized by having access patterns with holes.
 Interleaving is a widely used technique that fits the goal of generating more compact sets of data.
 Thus, it is the chosen data layout optimization.
