--- a/Old/Answers.tex
+++ b/Old/Answers.tex
@@ -22,14 +22,13 @@ The term irregular has been replaced with more descriptive terms, i.e. applicati
 
 \item \textit{In the experimental evaluation, have you also compared the proposed methodology with the state-of-art energy optimization techniques for embedded systems? If so, what is improvement of your approach over theirs?}
 
-It is difficult to reproduce the results from other groups only by reading their published work. The set of benchmarks is also different. Thus, related work is presented but not directly compared with the current approach. This work compares the current approach with the previous published work from our groups.
+It is difficult to reproduce the results from other groups only by reading their published work. The set of benchmarks is also different. Thus, related work is presented but not directly compared with the current approach. Many of the related work is also not directly applicable on the target benchmarks as shown in the paper. This work compares the current approach with the previous published work from our groups.
 
 \item \textit{Interleaving is only one type of data layout optimization. Have you also tried other more complex optimizations? What is the main reason that you think interleaving is the most suitable/efficient one?}
 
-Interleaving is a suitable layout optimization for the target set of benchmark applications.
+Interleaving is an energy optimization technique for the target set of benchmark applications, which are characterized by holes in their access patterns.
 The applications that benefit most from the proposed methodology are characterized by having access patterns with holes.
 Interleaving is a widely used technique that fits the goal of generating more compact sets of data.
-Thus, it is the chosen data layout optimization.
 Other optimization techniques can be complementary to the interleaving step of the methodology, if they are applied prior to the interleaving step.
 Otherwise, the methodology needs to be modified in order to be compatible with more complex optimizations.
 
@@ -41,7 +40,7 @@ The proposed architecture uses scratch-pad memories and no cache memory is inclu
 The main reason is that the data can be allocated on the scratchpad memory during compilation by the designer.
 Software controlled allocation is a significant feature for the current methodology, as the allocation of data can be fully determined by the designer during design-time.
 On the other hand, the hardware control automatically copies the data into the cache and resolves any hits or misses.
-The basic principles of the methodology are still applicable, but some modifications are probably needed to deal with cache memories.
+The basic principles of the methodology are still applicable, but some modifications would be needed to deal with cache memories.
 Temporal locality and data reuse are taken into consideration during the interleaving exploration.
 
 \textbf{This has been clarified on Section 4}
@@ -60,7 +59,7 @@ Similarly the approximation for the correlation between the dynamic energy and t
 
 \textbf{This has been clarified on Section 2}
 
-\item The commercial memory compiler is part of DesignWare Memory Compilers provided by Synopsys. The logic libraries supporting a wide range of foundries and process technologies from 250nm to 28nm. The memories are optimized for low power, high performance and high density. The 40nm library was chosen for the current work. The datasheet can be found in \cite{Virage}.
+\item The commercial memory compiler is one of the state-of-the-art compilers. The logic libraries supporting a wide range of foundries and process technologies from 250nm to 28nm. The memories are optimized for low power, high performance and high density. The 40nm library was chosen for the current work. The datasheet can be found in \cite{Virage}.
 
 \textbf{This has been clarified on Section 4.1}
 
@@ -89,7 +88,7 @@ In \cite{filippopoulos2013exploration} a group of different applications were st
 The results shows that depending on the application, the energy gains started to saturate after adding a third or a fourth bank and become far smaller when adding a fifth bank.
 Thus, for most applications a memory architecture with five memory banks already provides more than necessary reconfiguration options.  
 Secondly, the overhead increases exponentially with the number of memory banks, due to the increased complexity of the memory architecture. 
-Therefore, a memory architecture with six banks is not a potentially efficiency options due to the high overhead and the very low energy gain.
+Therefore, memory architectures with six or more banks are typically not efficient options due to the high overhead and the very low energy gain.
 
 \textbf{This has been clarified in the first paragraph on Section 5.3.}
 
@@ -123,31 +122,43 @@ out clearly.}
 The contribution of the proposed work is the development of a combined approach that investigates the interleaving and memory mapping options for a reconfigurable SIMD architecture.  
 The current work combines and expands in a non-trivial way, the interleaving exploration presented in \cite{sharma2013data} and the data to memory mapping methodology presented in \cite{filippopoulos2013exploration}. 
 The current work is more than a simple application of the two approaches, one after the other.
-Such an approach cannot always guarantee the optimal results.
-The reason is that for each different interleaving solutions, there is a different corresponding optimal memory mapping solution.
-However, an interleaving solution that results in less access holes than another, can lead to a less optimal memory mapping.
-In general, the optimal interleaving solution does not always lead to the optimal data-to-memory mapping solution.
-The reason is that the interleaving solution adds a number of constraints on the mapping of the interleaving data into the memory. 
+Such an approach cannot always guarantee a viable solution.
+The reason is that for each different interleaving solutions, there is a number of constraints on the placement of the data into the memory due to hardware limitations.
+If the constraints are not propagated into the data-to-memory mapping step, the final solutions suffers from data conflicts.
 Different interleaving solutions introduce different constraints. 
-Therefore, there is a need to develop an integrated methodology for the achieving the improvements of both approaches.
+Therefore, there is a need to develop an integrated methodology to achieve the improvements of both approaches.
 
 \textbf{This has been clarified at the end of Section 3.}
 
 \item \textit{It would be interesting to see more workloads analyzed in the framework.}
 
-Unfortunately, it was impossible to analyze more benchmarks for the current revision. However, we can expand the results, if extra time is given.
+Unfortunately, it was impossible to analyze more benchmarks for the current revision. 
+The chosen applications are representative candidates for the multimedia and the wireless domain.
+The results are representative for other applications with the same characteristics.
 
 \item \textit{The paper focuses on SIMD architectures but it does not make any reference memory mapping optimization on GPUs. Also it would be interesting to
 see if the framework can capture more irregular access patterns and data mapping schemes (e.g. permutations, indirect addresses, etc.). }
 
-The presented methodology should be applicable on these cases with some modifications.
+The presented methodology should be applicable on these cases but some modifications would be needed.
 
 \item \textit{Some references worth discussing:
 Dymaxion: optimizing memory access patterns for heterogeneous systems, SC'11
 Data reorganization in memory using 3D-stacked DRAM, ISCA'15
 DL: A data layout transformation system for heterogeneous computing, InPar'12}
 
+In \cite{dymaxion} the authors tackle the problem of sub-optimal data structure layouts in GPUs with a large number of parallel cores, especially for programs that are designed with a CPU memory interface in mind. 
+An API is presented, that allows programmers to improve CUDA programs by optimizing memory mappings in order to increase the efficiency of memory accesses. 
+The main differences of the current work is the different platform and the different type of code transformations. 
+We focus on an SIMD CPU and a dynamic clustered scratchpad memory compared to multicore GPUs and a static memory. 
+We differentiate by focusing on interleaving as the preferred code transformation, as it is more suitable for the target applications.
+Another work that discusses the memory layout for GPUs is presented in \cite{DL}.
+Although the authors focus on off-chip DRAM memory optimization while the current work discusses the closest memory to CPU, they use a number of data layout transformations.
+We differentiate by studying data interleaving while the main focus in \cite{DL} is the transformations that increase data parallelism which is more important for their multicore GPU architecture.
+In \cite{3D} a number of common data reorganization operations such as shuffle, pack/unpack, swap, transpose, and layout transformations are presented. 
+The goal is to study the cost of applying these operations in the memory during run-time. The target memory is 3D-stacked DRAM and additional hardware is employed in order to efficiently perform the reorganization operations with a low overhead. 
+Apart from the different type of platform, the current work differentiates in the type of data reorganizations and the mapping of the reorganized data at the scratchpad memory at compilation time. 
 
+\textbf{This has been clarified on Section 3.}
 
 \end{itemize}
 
@@ -155,9 +166,28 @@ DL: A data layout transformation system for heterogeneous computing, InPar'12}
 
 \begin{itemize}
 
-\item \textit{However, it is unclear to readers how the entire work is done.  Figure 2 only gives a simple diagram.  In particular,  what microarchitecture enhancement is included and how access patterns are extracted (in SW/HW) ?  How address mapping is implemented and its policy?  How interleaving is handled when there are bank conflicts and imperfect coalescing for SIMDs.  In general,  many details are missing.  Fig 3 is not very helpful.}
+\item \textit{In particular, what microarchitecture enhancement is included and how access patterns are extracted (in SW/HW) ?  How address mapping is implemented and its policy?  How interleaving is handled when there are bank conflicts and imperfect coalescing for SIMDs.  In general,  many details are missing.  Fig 3 is not very helpful.}
+
+The application is fully analyzed during design-time, because it is a time consuming task. 
+The access patterns are extracted in software and the possible interleaving options are explored. 
+The mapping in the specific target architecture is also fully decided during design-time.
+The data-to-memory mapping exploration takes into consideration the platform and code limitation and proposes a mapping without data and bank conflicts.
+The employment of a scratchpad memory architecture is crucial for this.
+In contrast to cache memory systems, in which the mapping of data elements is done at run-time, in scratchpad memory systems the mapping is performed by the programmer or the compiler \cite{ishitobi2007code}. 
+Unlike the cache memory, the scratchpad memory does not need tag search operations and it is the responsibility of the programmers or compilers to correctly allocate code and data on the scratchpad memory \cite{steinke2002assigning}.
+Of course, this is possible for a small embedded system designed to run a specific application. 
+When data allocation is a time consuming task, a cache memory is the preferred solution as the detection of a cache hit or miss is done automatically and any conflicts can also be resolved by the platform at run-time.
+In our case, the application and the memory system are fully analyzed and the allocation of data to a scratchpad memory can be easily done and offer a more energy efficient solution.
+
+\textbf{This has been clarified on Section 4. Smaller changes have been made to better explain the platform and the flow presented in Fig. 3}
 
 \item \textit{Also, the authors may look into the recent work by Akin, et al. "Data Reorganization in Memory Using 3D-stacked DRAM", ISCA 2015.}
+
+In \cite{3D} a number of common data reorganization operations such as shuffle, pack/unpack, swap, transpose, and layout transformations are presented. 
+The goal is to study the cost of applying these operations in the memory during run-time. The target memory is 3D-stacked DRAM and additional hardware is employed in order to efficiently perform the reorganization operations with a low overhead. 
+Apart from the different type of platform, the current work differentiates in the type of data reorganizations and the mapping of the reorganized data at the scratchpad memory at compilation time. 
+
+\textbf{This has been clarified on Section 3.}
 
 \item \textit{A minor point is the chosen benchmarks are not very irregular if appropriate data layouts are chosen.  This is fine, but the authors may consider other possibilities such as graphs and sparse matrices.}
 
